# CourseWorkOOP

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  config.json  config.yaml  main.cc  vcpkg-configuration.json  vcpkg.json
controllers/: BookRegisterApproveController.cc  BookRegisterController.cc  BookReserveApproveController.cc  BooksReserveController.cc  BooksViewController.cc  HelloViewController.cc  HomeController.cc  ReaderRegisterApproveController.cc  ReaderRegisterController.cc  ReaderViewController.cc  ReserveViewController.cc
models/: BookTypes.cc  BookTypes.h  Books.cc  Books.h  BooksInUse.cc  BooksInUse.h  BooksInUseExt.h  Readers.cc  Readers.h  model.json
sql/: create_database.sql
src/: CMakeLists.txt  main.cpp
src/templates/: index.html
test/: CMakeLists.txt
views/: HelloView.cc  HomeView.csp  HomeView.scp  ListBooks.cc  ListBooks.csp  ListBooks.h  ListBooksInUse.csp  ListParameters.cc  ListReaders.csp  LoginPage.cc  LogoutPage.cc  RegisterBook.csp  RegisterReader.csp  ReserveBook.csp  TestView.cc  TestView.csp
